@@ -2,7 +2,7 @@
 	spritegn.h
 	header file for sprite generation program
 
-	$Id: spritegn.h,v 1.5 2007-03-14 21:03:22 sezero Exp $
+	$Id$
 */
 
 #ifndef __SPRITEGEN_H
